Fix overflowing of text in result display

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@
     grid-template-rows: 20% 5% 15% 15% 15% 15% 15%;
     grid-template-columns: repeat(4, 25%);
     justify-items: center;
+    transition: all 0.4s;
 }
 
 .result {
@@ -45,7 +46,6 @@
 .typeText {
     font-size: 30px;
     bottom: 35%;
-    right: 6%;
 }
 
 .resultText {
